# avnwx

./: .gitignore  pyproject.toml
avnwx/: cli.py
avnwx/api/: __init__.py  spec.py  windtemp.py
tests/api/: test_windtemp.py
